# pingora-manager

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
benchmark/: .gitignore  README.md  docker-compose.yml
benchmark/backend/: Dockerfile  server.ts
benchmark/configs/caddy/: Caddyfile
benchmark/configs/envoy/: envoy.yaml
benchmark/configs/haproxy/: haproxy.cfg
benchmark/configs/nginx/: nginx.conf
benchmark/pingora/: Dockerfile
benchmark/scripts/: benchmark.sh  download-image.sh  generate-report.sh  run.sh
benchmark/wrk/: Dockerfile
benchmark/wrk/scripts/: delete.lua  (+3 more)
defaults/: default-page.html
defaults/error-pages/: 404.html  500.html  502.html  503.html
demo-nginx/: 1.conf  10.conf  11.conf  12.conf  13.conf  2.conf  4.conf  5.conf  6.conf  7.conf  8.conf  9.conf
docs/plans/: 2026-02-11-pingora-manager-design.md  2026-02-11-pingora-manager-implementation.md  2026-02-13-unified-hosts-design.md  2026-02-13-unified-hosts-plan.md  2026-02-16-location-centric-hosts-design.md  2026-02-16-location-centric-hosts-plan.md
proxy/: Cargo.toml
proxy/src/: access_control.rs  config.rs  error_pages.rs  log_writer.rs  main.rs  router.rs  ssl.rs  static_files.rs  streams.rs  upstream.rs
s6/: logrotate.conf
web/: drizzle.config.ts  init-db.mjs  package.json  tsconfig.json
web/app/: app.css  entry.server.tsx  root.tsx  routes.ts
web/drizzle/: 0000_cool_captain_america.sql  0001_unified_hosts.sql  0002_location_centric_hosts.sql  0003_add_compression.sql  0004_add_redirect_www.sql
(+77 files in other folders)
