[package]
name = "pingora-manager-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.7", features = ["lb"] }
pingora-proxy = "0.7"
pingora-core = "0.7"
pingora-load-balancing = "0.7"
pingora-http = "0.7"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
regex = "1"
glob = "0.3"
base64 = "0.22"
mime_guess = "2"
chrono = "0.4"
bytes = "1"
http = "1"
futures = "0.3"
libc = "0.2"
arc-swap = "1"
once_cell = "1"
parking_lot = "0.12"
